--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <head><title>Testing</title></head>
-    <body>Hello <p>New line</p></body>
+    <body>Hello <p>New line</p><p>Hot fix</p></body>
 </html>
